euphony-midi/src/snapshots/euphony_midi__message__snapshot_test-4.snap
---
source: euphony-midi/src/message.rs
expression: "MIDIMessage::from([192, 1])"

---
ProgramChange {
    channel: Channel(
        0,
    ),
    program: Program(
        1,
    ),
}
