euphony-midi/src/snapshots/euphony_midi__message__snapshot_test-5.snap
---
source: euphony-midi/src/message.rs
expression: "MIDIMessage::from([224, 127, 127])"

---
PitchBendChange {
    channel: Channel(
        0,
    ),
    pitch_bend: PitchBend(
        16383,
    ),
}
