euphony-midi/src/snapshots/euphony_midi__message__snapshot_test-7.snap
---
source: euphony-midi/src/message.rs
expression: "MIDIMessage::from([224, 0, 0])"

---
PitchBendChange {
    channel: Channel(
        0,
    ),
    pitch_bend: PitchBend(
        0,
    ),
}
