euphony-midi/src/snapshots/euphony_midi__message__snapshot_test.snap
---
source: euphony-midi/src/message.rs
expression: "MIDIMessage::from([144, 69, 114])"

---
NoteOn {
    channel: Channel(
        0,
    ),
    key: Key(
        69,
    ),
    velocity: Velocity(
        114,
    ),
}
